--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ nav{
     display: flex;
     align-items:center ;
     justify-content: space-between;
+    margin: 0px 200px ;
     
  
 }
@@ -51,5 +52,21 @@ font-weight: 700;
 line-height: 27px;
 color: rgb(255, 255, 255);
 padding: 18px 36px 19px 36px;
+
+}
+.header{
+  background-color: rgb(255, 248, 243);
+}
+.banner{
+
+  padding: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+ 
+}
+.profile_pic{
+  width: 584px;
+  height: 676px;
+ 
 
 }
