--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,18 @@ padding: 18px 36px 19px 36px;
 }
 .header{
   background-color: rgb(255, 248, 243);
+  background-image: url(images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+
+
 }
 .banner{
 
-  padding: 30px 30px 30px 150px;
+  padding: 30px 30px  0px 150px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
  
 }
 .profile_pic{
@@ -69,4 +75,53 @@ padding: 18px 36px 19px 36px;
   height: 676px;
  
 
+}
+.banner_greet
+{
+  font-size: 45px;
+  color: rgb(232, 139, 226);
+  margin-bottom: 0px;
+
+}
+.banner_title{
+  font-size: 85px;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.banner_para{
+  margin-bottom: 30px;
+}
+.banner_content{
+  width: 585px;
+height: 400px;
+ 
+}
+.about{
+  background: rgb(255, 248, 243);
+  max-width: 1140px;
+  margin: 130px auto;
+ 
+  padding: 130px 150px 130px 150px;
+ 
+}
+.about_me
+{
+ text-align: center;
+  
+}
+.about_info_container{
+  display: flex;
+ justify-content: space-around;
+}
+.about_para{
+  text-align: center;
+}
+.about_me_container{
+  border: 2px solid rgb(0, 0, 0);
+}
+.about_info_container{
+  padding: 50px 0px 1px 20px;
+}
+.about_info{
+  text-align: center;
 }
