--- a/styles.css
+++ b/styles.css
@@ -53,12 +53,23 @@ line-height: 27px;
 color: rgb(255, 255, 255);
 padding: 18px 36px 19px 36px;
 
+
 }
+.btn_primary:hover{
+  background-color: #3e8e41
+}
+.btn_primary:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+
 .header{
   background-color: rgb(255, 248, 243);
-  background-image: url(images/header_bg.png);
+  background-image: url(images/header_bg.png) ,url('images/developer.png ');
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: bottom right , bottom left;
 
 
 }
@@ -70,12 +81,13 @@ padding: 18px 36px 19px 36px;
   justify-content: space-between;
  
 }
-.profile_pic{
+.profile_pic  {
   width: 584px;
   height: 676px;
  
 
 }
+ 
 .banner_greet
 {
   font-size: 45px;
